...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Change Password" />

        <Button
            android:id="@+id/adminMuteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Mute User" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
